# GOES-Wallpaper

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  CUSTOM_IMAGERY_PLAN.md  NEXT_STEPS.md  OVERLAYS.md  PROJECTIONS.md  README.md  RUNNING.md  config.example.toml  config.toml  goes_wallpaper.py  migrate_overlay_config.py  overlays.toml  platform_base.py  platform_linux_kde.py  platform_macos.py  platform_render.py  platform_windows.py  pyproject.toml  source_satpy.py
.github/workflows/: ci.yml  release.yml
overlays/: cities.geojson
tests/: conftest.py  test_config.py  test_geolocation.py  test_image_file_source.py  test_image_math.py  test_info_block.py  test_instance_lock.py  test_lonlat_crop.py  test_migrate_overlay_config.py  test_overlay_geojson_files.py  test_overlay_shell.py  test_overlays_config.py  test_platform_base.py  test_platform_linux_kde.py  test_platform_render.py  test_platform_windows.py  test_power_network_fallback.py  test_reprojection.py  test_scheduling.py  test_smoke.py  test_source_resolution.py  test_source_satpy.py  test_version_logging.py
